Refactored tests.