@@ -181,17 +181,16 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
                 <configuration>
+                    <forkCount>1C</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <threadCount>2</threadCount>
+                    <perCoreThreadCount>true</perCoreThreadCount>
+                    <parallel>methods</parallel>
                     <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M -Dhazelcast.version.check.enabled=false
                         -Dhazelcast.mancenter.enabled=false
                     </argLine>
                     <excludes>
-                        <exclude>**/ClusterTest.java</exclude>
-                        <exclude>**/QueryTest.java</exclude>
-                        <exclude>**/MapStoreTest.java</exclude>
-                        <exclude>**/PerformanceTest.java</exclude>
-                        <exclude>**/Redo*</exclude>
-                        <exclude>**/CMapTest.java</exclude>
-                        <exclude>**/*StressTest.java</exclude>
+                        <exclude>com/hazelcast/cluster/*.java</exclude>
                     </excludes>
                 </configuration>
             </plugin>
@@ -200,10 +199,8 @@
     </build>
 
     <profiles>
-
-        <!-- profile that runs the StressTests. Normally they should not be run because they take too much time. -->
         <profile>
-            <id>stresstest</id>
+            <id>network</id>
             <build>
                 <plugins>
                     <plugin>
@@ -215,36 +212,8 @@
                                 -Dhazelcast.mancenter.enabled=false
                             </argLine>
                             <includes>
-                                <include>**/*StressTest.java</include>
+                                <include>com/hazelcast/cluster/**/*.java</include>
                             </includes>
-                            <!-- we need to clean the 'exclude' since it already is being filled by the original
-                       plugin configuration for this plugin. -->
-                            <excludes>
-                                <exclude>Nonsense</exclude>
-                            </excludes>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>all</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${maven.surefire.plugin.version}</version>
-                        <configuration>
-                            <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M -Dhazelcast.version.check.enabled=false
-                                -Dhazelcast.mancenter.enabled=false
-                            </argLine>
-                            <excludes>
-                                <exclude>**/PerformanceTest.java</exclude>
-                                <exclude>**/*StressTest.java</exclude>
-                            </excludes>
-
                             <reportNameSuffix>${reportNameSuffix}</reportNameSuffix>
                         </configuration>
                     </plugin>
@@ -252,29 +221,6 @@
             </build>
         </profile>
 
-        <profile>
-            <id>elastic</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${maven.surefire.plugin.version}</version>
-                        <configuration>
-                            <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M -XX:MaxDirectMemorySize=1500m
-                                -Dhazelcast.version.check.enabled=false -Dhazelcast.mancenter.enabled=false
-                            </argLine>
-                            <excludes>
-                                <exclude>**/PerformanceTest.java</exclude>
-                                <exclude>**/*StressTest.java</exclude>
-                                <exclude>**/MemoryLeakTest.java</exclude>
-                                <exclude>**/ICountDownLatchTest.java</exclude>
-                            </excludes>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
     </profiles>
 
     <dependencies>
